- Added Tabler icon set to Rock.

--- a/RockWeb/Styles/_rock-core.less
+++ b/RockWeb/Styles/_rock-core.less
@@ -175,6 +175,7 @@
 
 // import as less files so they are concatenated properly
 @import (less) "./summernote/summernote.min.css";
+@import (less) "styles-v2-prototype/icons/tabler-icon.css";
 
 @import "_page-admin.less";
 @import "_modal.less";
