--- a/RockWeb/Styles/styles-v2-prototype/icons/tabler-icon.css
+++ b/RockWeb/Styles/styles-v2-prototype/icons/tabler-icon.css
@@ -11,6 +11,7 @@
 .ti {
   font-family: "tabler-icons-outline" !important;
   font-weight: normal;
+  font-style: normal;
   font-size: 1.3em; /* Added this because FontAwesome Icon is bigger than tabler so, when switching to tabler from FA the tabler icon is smaller */
 }
 
