--- a/RockWeb/Styles/styles-v2-prototype/_css-variable.scss
+++ b/RockWeb/Styles/styles-v2-prototype/_css-variable.scss
@@ -145,8 +145,7 @@
   --color-sequential-10:  #C9F4DC;
   --color-sequential-11:  #E4F9ED;
 
-  --color-code:    #c7254e;
-  --color-code-bg: #f9f2f4;
+  --kpi-col-lg: var(--color-interface-soft)
 
   // ========================= END COLOR ==========================
 
