--- a/RockWeb/Styles/styles-v2-prototype/components/_modals.scss
+++ b/RockWeb/Styles/styles-v2-prototype/components/_modals.scss
@@ -104,6 +104,7 @@ body.modal-open,
 
 .modal-title {
   margin:       0;
+  color: var(--base-interface-softest);
   line-height:  var(--line-height-normal);
 }
 
