--- a/RockWeb/Styles/styles-v2-prototype/rock-components/_labels.scss
+++ b/RockWeb/Styles/styles-v2-prototype/rock-components/_labels.scss
@@ -22,13 +22,13 @@
 }
 
 .label-campus {
-  color:            var(--color-interface-softest);
+  color:            var(--base-interface-softest);
   background-color: var(--color-secondary);
 }
 
 .label-type {
-  color:            var(--color-interface-softest);
-  background-color: var(--color-interface-soft);
+  color:            var(--base-interface-softest);
+  background-color: var(--color-interface-medium);
 }
 
 .label-communicationstatus-approved {
