--- a/RockWeb/Styles/Blocks/Shared/DragPallet.css
+++ b/RockWeb/Styles/Blocks/Shared/DragPallet.css
@@ -21,8 +21,8 @@
     cursor: -moz-grab;
     cursor: grab;
     zoom: 1;
-    background-color: var(--theme-white);
-    border: 1px solid transparent;
+    background-color: var(--color-interface-softest);
+    border: 1px solid var(--color-interface-soft);
     border-radius: 2px;
     box-shadow: 0 2px 2px rgba(0,0,0,0.05);
 }
