--- a/RockWeb/Styles/styles-v2-prototype/core.scss
+++ b/RockWeb/Styles/styles-v2-prototype/core.scss
@@ -130,7 +130,7 @@
 @import 'rock-components/connection-request.scss';
 @import 'rock-components/hero-section';
 @import 'rock-components/tox-overrides';
-
+@import 'rock-components/workflow';
 
 /* ===================== BLOCK =================== */
 @import 'blocks/blocks-core';                       // Fully Format. There are Some hard coded value.
