--- a/RockWeb/Styles/styles-v2-prototype/rock-components/_security-controls.scss
+++ b/RockWeb/Styles/styles-v2-prototype/rock-components/_security-controls.scss
@@ -23,6 +23,13 @@
   }
 }
 
+// splash screen
+.splash-form-btn {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 // Override the default ul/ol background-color 
 .nav {
   .open > a {
