--- a/RockWeb/Styles/styles-v2-prototype/_css-variable.scss
+++ b/RockWeb/Styles/styles-v2-prototype/_css-variable.scss
@@ -16,7 +16,7 @@
   --base-critical:    #ee7725;
   --base-danger:      #D70015;
   --base-info:        #007AFF;
-  --base-success:     #248A3D;
+  --base-success:     #32D74B;
 
   --base-primary:     #FF791D;
   --base-warning:     #E58600;
@@ -79,27 +79,27 @@
     --shade-black-percentage: 15%;
 
     --color-critical-tint:  color-mix(in srgb, var(--base-critical) 50%, transparent var(--tint-white-percentage));
-    --color-critical-soft:  color-mix(in srgb, var(--base-critical) 15%, transparent var(--tint-white-percentage));
+    --color-critical-soft:  color-mix(in srgb, var(--base-critical) 9%, transparent var(--tint-white-percentage));
     --color-critical-shade: color-mix(in srgb, var(--base-critical) 100%, #000 var(--shade-black-percentage));
   
     --color-danger-tint:    color-mix(in srgb, var(--base-danger) 50%, transparent var(--tint-white-percentage));
-    --color-danger-soft:    color-mix(in srgb, var(--base-danger) 15%, transparent var(--tint-white-percentage));
+    --color-danger-soft:    color-mix(in srgb, var(--base-danger) 9%, transparent var(--tint-white-percentage));
     --color-danger-shade:   color-mix(in srgb, var(--base-danger) 100%, #000 var(--shade-black-percentage));
   
     --color-info-tint:      color-mix(in srgb, var(--base-info) 50%, transparent var(--tint-white-percentage));
-    --color-info-soft:      color-mix(in srgb, var(--base-info) 15%, transparent var(--tint-white-percentage));
+    --color-info-soft:      color-mix(in srgb, var(--base-info) 9%, transparent var(--tint-white-percentage));
     --color-info-shade:     color-mix(in srgb, var(--base-info) 100%, #000 var(--shade-black-percentage));
   
     --color-success-tint:   color-mix(in srgb, var(--base-success) 50%, transparent var(--tint-white-percentage));
-    --color-success-soft:   color-mix(in srgb, var(--base-success) 15%, transparent var(--tint-white-percentage));
+    --color-success-soft:   color-mix(in srgb, var(--base-success) 9%, transparent var(--tint-white-percentage));
     --color-success-shade:  color-mix(in srgb, var(--base-success) 100%, #000 var(--shade-black-percentage));
   
     --color-warning-tint:   color-mix(in srgb, var(--base-warning) 50%, transparent var(--tint-white-percentage));
-    --color-warning-soft:   color-mix(in srgb, var(--base-warning) 15%, transparent var(--tint-white-percentage));
+    --color-warning-soft:   color-mix(in srgb, var(--base-warning) 9%, transparent var(--tint-white-percentage));
     --color-warning-shade:  color-mix(in srgb, var(--base-warning) 100%, #000 var(--shade-black-percentage));
   
     --color-primary-tint:   color-mix(in srgb, var(--base-primary) 50%, transparent var(--tint-white-percentage));
-    --color-primary-soft:   color-mix(in srgb, var(--base-primary) 15%, transparent var(--tint-white-percentage));
+    --color-primary-soft:   color-mix(in srgb, var(--base-primary) 9%, transparent var(--tint-white-percentage));
     --color-primary-shade:  color-mix(in srgb, var(--base-primary) 100%, #000 var(--shade-black-percentage));
   
     --color-link-tint:      color-mix(in srgb, var(--base-link) 50%, transparent var(--tint-white-percentage));
@@ -182,6 +182,7 @@
   --font-family-body:         var(--font-family-sans);
   --font-family-segoe:        "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   --font-family-sans:         -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  // --font-family-sans:         "Lato", sans-serif;
   --font-family-serif:        Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
   --font-family-monospace:    Menlo, Monaco, Consolas, "Courier New", monospace;
 
