- Added global margin-right to label in .panel-header-actions instead of using the mr-3 style class.

--- a/RockWeb/Styles/_rock-core.less
+++ b/RockWeb/Styles/_rock-core.less
@@ -542,6 +542,10 @@ th[align="right"] {
     //   color: @panel-heading-text-color;
     // }
 
+    .panel-header-actions {
+      margin-right: 1rem !important;
+    }
+    
     .panel-title {
       small {
         opacity: .5;
